--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout('layouts/boilerplate') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Campground</title>
-</head>
-
-<body>
-    <form action="/campgrounds" method="POST">
+    <!-- <form action="/campgrounds" method="POST">
         <div>
             <label for="title">Title</label>
             <input type="text" id="title" name="campground[title]">
@@ -19,8 +11,38 @@
         </div>
         <button>Add Campground</button>
     </form>
-    <a href="/campgrounds">All Campgrounds</a>
+    <a href="/campgrounds">All Campgrounds</a> -->
+    <h1 class="text-center mb-5">New Campground</h1>
+    <form action="/campgrounds" method="POST">
+        <div class=" mb-3">
+            <label for="title" class=" col-form-label">Title</label>
+            <div class="">
+                <input type="text" class="form-control" id="title" name="campground[title]">
+            </div>
+        </div>
+        <div class=" mb-3">
+            <label for="location" class=" col-form-label">Location</label>
+            <div class="">
+                <input type="text" class="form-control" id="location" name="campground[location]">
+            </div>
+        </div>
+        <div class=" mb-3">
+            <label for="image" class=" col-form-label">Image URL</label>
+            <div class="">
+                <input type="text" class="form-control" id="image" name="campground[image]">
+            </div>
+        </div>
+        <div class=" mb-3">
+            <label for="price" class=" col-form-label">Price</label>
+            <div class="input-group col-sm-4" style="">
+                <span class="input-group-text">₹</span>
+                <input id="price" name="campground[price]" type="text" class="form-control" aria-label="Amount (to the nearest Rupee)" placeholder="0.00">
+            </div>
+        </div>
+        <div class="mb-5">
+            <label class="form-label" for="description">Description</label>
+            <textarea id="description" name="campground[description]" class="form-control" aria-label="Description"></textarea>
+          </div>
 
-</body>
-
-</html>
+        <button type="submit" class="btn btn-success">Add Campground</button>
+    </form>
