basic style edit form, new form, list etc

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -34,7 +34,7 @@
         </div>
         <div class=" mb-3">
             <label for="price" class=" col-form-label">Price</label>
-            <div class="input-group col-sm-4" style="">
+            <div class="input-group col-sm-4" >
                 <span class="input-group-text">₹</span>
                 <input id="price" name="campground[price]" type="text" class="form-control" aria-label="Amount (to the nearest Rupee)" placeholder="0.00">
             </div>
