--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 
-    <h1>EDIT CAMPGROUND</h1>
+    <!-- <h1>EDIT CAMPGROUND</h1>
     <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST">
         <div>
             <label for="title">Title</label>
@@ -12,4 +12,38 @@
         </div>
         <button>Update Campground</button>
     </form>
-    <a href="/campgrounds/<%= campground._id%>">Back To Campground</a>
+    <a href="/campgrounds/<%= campground._id%>">Back To Campground</a> -->
+    <h1 class="text-center mb-5">Update Campground</h1>
+    <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST">
+        <div class=" mb-3">
+            <label for="title" class=" col-form-label">Title</label>
+            <div class="">
+                <input type="text" class="form-control" id="title" name="campground[title]"  value="<%=campground.title %>">
+            </div>
+        </div>
+        <div class=" mb-3">
+            <label for="location" class=" col-form-label">Location</label>
+            <div class="">
+                <input type="text" class="form-control" id="location" name="campground[location]" value="<%= campground.location%>">
+            </div>
+        </div>
+        <div class=" mb-3">
+            <label for="image" class=" col-form-label">Image URL</label>
+            <div class="">
+                <input type="text" class="form-control" id="image" name="campground[image]" value="<%= campground.image%>">
+            </div>
+        </div>
+        <div class=" mb-3">
+            <label for="price" class=" col-form-label">Price</label>
+            <div class="input-group col-sm-4" style="">
+                <span class="input-group-text">₹</span>
+                <input id="price" name="campground[price]" type="text" class="form-control" aria-label="Amount (to the nearest Rupee)"  value="<%= campground.price%>" placeholder="0.00">
+            </div>
+        </div>
+        <div class="mb-5">
+            <label class="form-label" for="description">Description</label>
+            <textarea id="description" name="campground[description]" class="form-control" aria-label="Description"><%= campground.description%></textarea>
+          </div>
+
+        <button type="submit" class="btn btn-info" style="color:white;">Update Campground</button>
+    </form>
