--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 
-    <h1><%=campground.title %></h1>
+    <!-- <h1><%=campground.title %></h1>
     <h2><%=campground.location %></h2>
     <img src="<%=campground.image%>" alt="">
     <p><%= campground.description %></p>
@@ -8,6 +8,29 @@
     <form action="/campgrounds/<%=campground._id %>?_method=DELETE" method="POST">
     <button>DELETE</button>
     </form>
-    <a href="/campgrounds">All Campgrounds</a>
+    <a href="/campgrounds">All Campgrounds</a> -->
+    <div class="d-flex justify-content-center">
+        <div class="card" style=" max-width: 30rem;" >
+            <img src="<%=campground.image%>" class="card-img-top" alt="">
+            <div class="card-body">
+              <h5 class="card-title"><%=campground.title%></h5>
+              <p class="card-text"><%=campground.description%></p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><b>Location:</b> <%=campground.location%></li>
+              <li class="list-group-item"><b>Price:</b> ₹ <%=campground.price%></li>
+              <!-- <li class="list-group-item">A third item</li> -->
+            </ul>
+            <div class="card-body d-flex justify-content-between">
+              <a href="/campgrounds/<%= campground._id%>/edit" class="btn btn-info text-light">Edit</a>
+              <form action="/campgrounds/<%=campground._id %>?_method=DELETE" method="POST">
+                <button class="btn btn-danger">Delete</a>
+
+              </form>
+            </div>
+          </div>
+    </div>
+    
+    
 
   
