--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,36 +1,105 @@
 <% layout('layouts/boilerplate') %>
 
-    <!-- <h1><%=campground.title %></h1>
-    <h2><%=campground.location %></h2>
-    <img src="<%=campground.image%>" alt="">
-    <p><%= campground.description %></p>
-    <a href="/campgrounds/<%= campground._id%>/edit">EDIT</a><br>
-    <form action="/campgrounds/<%=campground._id %>?_method=DELETE" method="POST">
-    <button>DELETE</button>
-    </form>
-    <a href="/campgrounds">All Campgrounds</a> -->
-    <div class="d-flex justify-content-center">
-        <div class="card" style=" max-width: 30rem;" >
-            <img src="<%=campground.image%>" class="card-img-top" alt="">
-            <div class="card-body">
-              <h5 class="card-title"><%=campground.title%></h5>
-              <p class="card-text"><%=campground.description%></p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item"><b>Location:</b> <%=campground.location%></li>
-              <li class="list-group-item"><b>Price:</b> ₹ <%=campground.price%></li>
-              <!-- <li class="list-group-item">A third item</li> -->
-            </ul>
-            <div class="card-body d-flex justify-content-between">
-              <a href="/campgrounds/<%= campground._id%>/edit" class="btn btn-info text-light">Edit</a>
-              <form action="/campgrounds/<%=campground._id %>?_method=DELETE" method="POST">
-                <button class="btn btn-danger">Delete</a>
 
-              </form>
-            </div>
-          </div>
+  <div class="d-flex justify-content-around align-items-center flex-row">
+    
+    <div class="card mb-5 mt-0" style="width: 30rem;">
+      <img src="<%=campground.image%>" class="card-img-top" alt="">
+      <div class="card-body">
+          <%=campground.title%>
+        </h5>
+        <p class="card-text">
+          <%=campground.description%>
+        </p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item"><b>Location:</b>
+          <%=campground.location%>
+        </li>
+        <li class="list-group-item"><b>Price:</b> ₹ <%=campground.price%>
+        </li>
+        <!-- <li class="list-group-item">A third item</li> -->
+      </ul>
+      <div class="card-body d-flex justify-content-between">
+        <a href="/campgrounds/<%= campground._id%>/edit" class="btn btn-info text-light">Edit</a>
+        <form action="/campgrounds/<%=campground._id %>?_method=DELETE" method="POST">
+          <button class="btn btn-danger">Delete</button>
+        </form>
+      </div>
+
     </div>
-    
-    
 
-  
+    <div class="d-flex flex-column">
+      <form class="campgroundValidation" action="/campgrounds/<%= campground._id%>/reviews" method="POST" novalidate>
+        <div class="card mb-5" style="width: 30rem;">
+          <div class="card-body">
+            <h3 class="card-title">Leave a review</h3>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <h6 class="card-title mb-2">Rating</h6>
+
+              <div aria-label="Rating">
+
+                <input type="radio" class="btn-check" value="1" name="review[rating]" id="1star" autocomplete="off">
+                <label class="btn btn-outline-secondary " for="1star">1 <i class="fa fa-star"></i></label>
+
+                <input type="radio" class="btn-check" value="2" name="review[rating]" id="2star" autocomplete="off">
+                <label class="btn btn-outline-secondary " for="2star">2 <i class="fa fa-star"></i></label>
+
+                <input type="radio" class="btn-check" value="3" name="review[rating]" id="3star" autocomplete="off">
+                <label class="btn btn-outline-secondary " for="3star">3 <i class="fa fa-star"></i></label>
+
+                <input type="radio" class="btn-check" value="4" name="review[rating]" id="4star" autocomplete="off">
+                <label class="btn btn-outline-secondary " for="4star">4 <i class="fa fa-star"></i></label>
+
+                <input type="radio" class="btn-check" value="5" name="review[rating]" id="5star" autocomplete="off"
+                  checked>
+                <label class="btn btn-outline-secondary " for="5star">5 <i class="fa fa-star"></i></label>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <div class="mb-3">
+                <label for="reviewbody" class="form-label">Review</label>
+                <textarea class="form-control" id="reviewbody" name="review[body]" rows="3" required></textarea>
+                <div class="valid-feedback">Looks Good!</div>
+              </div>
+            </li>
+          </ul>
+          <div class="card-body d-flex justify-content-between">
+            <button class="btn btn-success text-light">Submit</a>
+
+          </div>
+        </div>
+      </form>
+      <%for(let review of campground.reviews){%>
+        <div class="card border-dark mb-3" style="width: 30rem;">
+          <!-- <div class="card-header">Header</div> -->
+          <div class="flex-d flex-row px-2 py-2">
+            <%for(let i=0;i<review.rating;i++){%>
+              <i class="fa fa-star" style="color: #f1c40e;"></i>
+              <%}%>
+                <%for(let i=0;i<(5-review.rating);i++){%>
+                  <i class="fa fa-star" style="color: #9a9a9a;"></i>
+                  <%}%>
+          </div>
+
+
+          <div class="card-body">
+            <!-- <h5 class="card-title">Dark card title</h5> -->
+            <p class="card-text">
+              <%=review.body%>
+            </p>
+          </div>
+          <div class="card-body d-flex justify-content-between">
+            <form action="/campgrounds/<%=campground._id %>/reviews/<%=review.id%>?_method=DELETE" method="POST">
+              <button class="btn btn-sm btn-danger">Delete</button>
+            </form>
+          </div>
+        </div>
+
+        <%}%>
+
+    </div>
+
+  </div>
