--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -19,8 +19,7 @@
 </body>
 </html>
 
-<!-- 
-<script>
+<!-- <script>
   (() => {
   'use strict'
 
@@ -37,4 +36,5 @@
     }, false)
   })
 })()
-</script> 
+</script>  -->
+<script src="https://kit.fontawesome.com/ff348a1e65.js" crossorigin="anonymous"></script>
