--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,8 +10,17 @@
             <div class="navbar-nav">
                 <a class="nav-link" href="/">Home</a>
                 <a class="nav-link" href="/campgrounds">Campgrounds</a>
-                <a class="nav-link" href="/campgrounds/new">New Campground</a>
+                <a class="nav-link" href="/campgrounds/new">New Campground</a>  
             </div>
         </div>
+        <div class="navbar-nav ml-auto">
+          <% if(!currentuser) {%>
+          <a class="nav-link" href="/signin">Login</a>
+          <a class="nav-link" href=""><%=currentuser %></a>
+          <a class="nav-link" href="/register">Register</a>
+          <% } else {%>
+          <a class="nav-link" href="/logout">Logout</a>
+          <% } %>
+      </div>
     </div>
 </nav>
