--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -19,6 +19,8 @@
         </li>
         <li class="list-group-item"><b>Price:</b> ₹ <%=campground.price%>
         </li>
+        <li class="list-group-item"><b>Submitted by:</b> <%=campground.author.username%>
+        </li>
         <!-- <li class="list-group-item">A third item</li> -->
       </ul>
       <div class="card-body d-flex justify-content-between">
@@ -31,6 +33,7 @@
     </div>
 
     <div class="d-flex flex-column">
+      <% if(currentuser) {%>
       <form class="campgroundValidation" action="/campgrounds/<%= campground._id%>/reviews" method="POST" novalidate>
         <div class="card mb-5" style="width: 30rem;">
           <div class="card-body">
@@ -73,10 +76,13 @@
           </div>
         </div>
       </form>
+      <% } %>
+      <h3 class="card-title">Reviews</h3>
       <%for(let review of campground.reviews){%>
         <div class="card border-dark mb-3" style="width: 30rem;">
           <!-- <div class="card-header">Header</div> -->
           <div class="flex-d flex-row px-2 py-2">
+            <strong>Rating:</strong>
             <%for(let i=0;i<review.rating;i++){%>
               <i class="fa fa-star" style="color: #f1c40e;"></i>
               <%}%>
@@ -84,19 +90,20 @@
                   <i class="fa fa-star" style="color: #9a9a9a;"></i>
                   <%}%>
           </div>
+          <h6 class="card-subtitle mb-2 text-secondary px-2 py-2">By <%=review.author.username %></h6>
 
 
-          <div class="card-body">
-            <!-- <h5 class="card-title">Dark card title</h5> -->
-            <p class="card-text">
-              <%=review.body%>
+            <p class="card-text px-2 py-2 mb-3">
+              <strong>Review:</strong> <%=review.body%>
             </p>
-          </div>
-          <div class="card-body d-flex justify-content-between">
-            <form action="/campgrounds/<%=campground._id %>/reviews/<%=review.id%>?_method=DELETE" method="POST">
+            <% if(currentuser&&review.author.equals(currentuser._id)) {%>
+
+            <form class="px-2 py-2 " action="/campgrounds/<%=campground._id %>/reviews/<%=review.id%>?_method=DELETE" method="POST">
               <button class="btn btn-sm btn-danger">Delete</button>
             </form>
-          </div>
+
+          <% } %>
+
         </div>
 
         <%}%>
