--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,5 @@
 <% layout('layouts/boilerplate') %>
 
-
   <div class="d-flex justify-content-around align-items-center flex-row">
     
     <div class="card mb-5 mt-0" style="width: 30rem;">
@@ -56,6 +55,7 @@
     </div>
 
     <div class="d-flex flex-column">
+      <div class="mb-5" id='map' style='width: 400px; height: 300px;'></div>
       <% if(currentuser) {%>
       <form class="campgroundValidation" action="/campgrounds/<%= campground._id%>/reviews" method="POST" novalidate>
         <div class="card mb-5" style="width: 30rem;">
@@ -134,3 +134,12 @@
     </div>
 
   </div>
+
+
+<script>
+  const mapToken='<%-process.env.MAPBOX_TOKEN%>';
+  const campground=<%- JSON.stringify(campground) %>;
+
+</script>
+
+<script src="/js/showPagemap.js"> </script>
