--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -137,9 +137,8 @@
 
 
 <script>
-  const mapToken='<%-process.env.MAPBOX_TOKEN%>';
-  const campground=<%- JSON.stringify(campground) %>;
-
+    const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+    const campground = <%- JSON.stringify(campground) %>
 </script>
 
 <script src="/js/showPagemap.js"> </script>
