--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,5 +1,5 @@
 <% layout('layouts/boilerplate') %>
-
+<div id="map" class="mb-5" style="width:100%; height:500px"></div>
     <h1 class="mb-5">LIST OF CAMPGROUNDS</h1>
 
     <%for(let campground of campgrounds){%>
@@ -35,3 +35,12 @@
         </div>
 
         <% } %>
+        <script>
+            const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+            const campgrounds ={features:<%- JSON.stringify(campgrounds) %>};
+            
+        </script>
+
+        <script src="/js/clustermap.js">
+      
+        </script>
