added some style

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -59,7 +59,7 @@
                 Looks good!
             </div>
         </div>
-        <div class="mb-5">
+        <div class="mb-5" style="width: auto;">
             <ul class="list-group">
 
                 <% campground.images.forEach((img,index)=>{ %>
