--- a/views/campgrounds/home.ejs
+++ b/views/campgrounds/home.ejs
@@ -17,7 +17,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
-                <h3  class="float-md-left mb-2">CampVentures</h3>
+                <h2 class="float-md-left mb-2">CampVentures</h2>
                 <nav class="nav nav-masthead justify-content-center float-md-right">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                     <a class="nav-link" href="/campgrounds">Campgrounds</a>
@@ -31,15 +31,16 @@
             </div>
         </header>
         <main class="px-3">
-            <h1>CampVentures</h1>
+            <h1 id="center-heading">CampVentures</h1>
             <p class="lead"> Welcome to CampVentures! <br> Jump right in and explore our many campgrounds. <br>
                 Feel free to share some of your own and comment on others!</p>
-            <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
-                Campgrounds</a>
+            <a id="viewcamp-btn" href="/campgrounds" class="btn btn-lg  font-weight-bold  ">
+                View Campgrounds
+            </a>
         </main>
 
         <footer class="mt-auto text-white-50">
-            <p>&copy; 2020 </p>
+            <p>&copy; CampVentures </p>
         </footer>
 
 
