--- a/views/userRegistration/signin.ejs
+++ b/views/userRegistration/signin.ejs
@@ -1,5 +1,6 @@
 <% layout('layouts/boilerplate') %>
-
+<link rel="stylesheet" href="/css/signinsignout.css">
+<div id="outer-container">
 <h1 class="text-center mb-5">Sign In</h1>
 <form action="/signin" method="POST" class="campgroundValidation" novalidate>
     <div class=" mb-3">
@@ -21,5 +22,6 @@
             </div>
         </div>
     </div>
-    <button type="submit" class="btn btn-success mb-5">Sign In</button>
+    <button type="submit" class="btn btn-success mb-3">Sign In</button>
 </form>
+</div>
