--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,7 +1,7 @@
 body {
     height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://images.unsplash.com/photo-1559521783-1d1599583485?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+    url("https://images.unsplash.com/photo-1495613455702-836d1327ebc6?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=900&ixid=MnwxfDB8MXxyYW5kb218MHx8bW91bnRhaW4tY2FtcHx8fHx8fDE2ODU2ODcyNzM&ixlib=rb-4.0.3&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1600");
     background-size: cover;
     background-position: center;
     text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
@@ -33,4 +33,28 @@ body {
 .btn-secondary, .btn-secondary:hover{
     color: #333;
     text-shadow: none;
+}
+
+#center-heading{
+        font-size: 5em;
+        background: -webkit-linear-gradient(rgb(255, 173, 173), rgb(255, 37, 226));
+        -webkit-background-clip: text;
+        background-clip:text;
+        -webkit-text-fill-color:rgba(255, 255, 255, 0.485);
+}
+
+#viewcamp-btn{
+    transition: all 0.3s ease-in-out;
+    background-color: rgb(88, 177, 255);
+    border:none;
+    color: white;
+    border-radius: 10px;
+
+}
+
+#viewcamp-btn:hover{
+    transform: scale(1.3);
+    background-color: rgb(54, 158, 249);
+
+
 }
