--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,13 +1,12 @@
 <% layout('layouts/boilerplate') %>
+<link rel="stylesheet" href="/css/index.css">
 <div id="map" class="mb-5" style="width:100%; height:500px"></div>
-    <h1 class="mb-5">LIST OF CAMPGROUNDS</h1>
+    <h1 id="heading" class="mb-5">LIST OF CAMPGROUNDS</h1>
 
     <%for(let campground of campgrounds){%>
-        <!-- <li><a href="/campgrounds/<%=campground._id %>">
-                <%= campground.title %>
-            </a></li> -->
 
-        <div class="card mb-3">
+
+        <div id="campground-data" class="card mb-3">
             <div class="row g-0">
                 <div class="col-md-4">
                     <% if(campground.images.length) {%>
@@ -18,16 +17,16 @@
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h5 class="card-title">
+                        <h5 id="campground-title" class="card-title">
                             <%= campground.title %>
                         </h5>
-                        <p class="card-text">
+                        <p id="campground-description" class="card-text">
                             <%= campground.description %>
                         </p>
-                        <p class="card-text"><small class="text-body-secondary">
+                        <p id="campground-location" class="card-text"><small class="text-body-secondary">
                                 <%= campground.location %>
                             </small></p>
-                        <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>" role="button">View <%=
+                        <a id="view-btn" class="btn" href="/campgrounds/<%=campground._id%>" role="button">View <%=
                                 campground.title %> </a>
                     </div>
                 </div>
