--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,5 +1,8 @@
 <% layout('layouts/boilerplate') %>
+<link rel="stylesheet" href="/css/newcamp.css">
+    <div id="new-campground-form" class="mb-5">
     <h1 class="text-center mb-5">New Campground</h1>
+
     <form action="/campgrounds" method="POST" class="campgroundValidation" enctype="multipart/form-data" novalidate>
         <div class=" mb-3">
             <label for="title" class=" col-form-label">Title</label>
@@ -49,7 +52,7 @@
                 </div>
             </div>
         </div>
-        <div class="mb-5">
+        <div class="mb-3">
             <label class="form-label" for="description">Description</label>
             <textarea id="description" name="campground[description]" class="form-control" aria-label="Description" required></textarea>
             <div class="valid-feedback">
@@ -57,5 +60,6 @@
             </div>
           </div>
 
-        <button type="submit" class="btn btn-success mb-5">Add Campground</button>
+        <button type="submit" class="btn btn-success mb-2">Add Campground</button>
     </form>
+</div>
