--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,15 +1,16 @@
 <% layout('layouts/boilerplate') %>
-
-  <div class="d-flex justify-content-around align-items-center flex-row">
-    
-    <div class="card mb-5 mt-0" style="width: 30rem;">
+<link rel="stylesheet" href="/css/show.css">
+  <div class="container">
+    <div class="row">
+      <div id="campground-info" class="col">
+    <div  id="campground-info-card" class=" card  mb-5"  style="padding:0;" >
 
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
       <% campground.images.forEach((img,i)=>{%>
 
             <div class="carousel-item <%= (i===0?'active' : '' ) %>">
-              <img src="<%=img.url %>" class="d-block w-100" alt="">
+              <img id="campground-image" src="<%=img.url %>" class="d-block w-100" alt="">
             </div>
         <% }) %>
 
@@ -45,20 +46,26 @@
         </li>
         <!-- <li class="list-group-item">A third item</li> -->
       </ul>
-      <div class="card-body d-flex justify-content-between">
-        <a href="/campgrounds/<%= campground._id%>/edit" class="btn btn-info text-light">Edit</a>
+      <div class="card-body  d-flex justify-content-between">
+        <form action="/campgrounds/<%= campground._id%>/edit" method="get">
+          <button class="btn btn-info text-light">Edit</button>
+        </form>
         <form action="/campgrounds/<%=campground._id %>?_method=DELETE" method="POST">
           <button class="btn btn-danger">Delete</button>
         </form>
       </div>
 
     </div>
+    </div>
+  
 
-    <div class="d-flex flex-column">
-      <div class="mb-5" id='map' style='width: 400px; height: 300px;'></div>
+    <div id="spacing-div" class="col-2"></div>
+
+    <div id="review-section" class=" col mb-5 ">
+      <div class="mb-5" id='map' style='width: auto; height: 300px;'></div>
       <% if(currentuser) {%>
-      <form class="campgroundValidation" action="/campgrounds/<%= campground._id%>/reviews" method="POST" novalidate>
-        <div class="card mb-5" style="width: 30rem;">
+      <form id="review-form" class="campgroundValidation" action="/campgrounds/<%= campground._id%>/reviews" method="POST" novalidate>
+        <div class="card mb-5" >
           <div class="card-body">
             <h3 class="card-title">Leave a review</h3>
           </div>
@@ -66,23 +73,23 @@
             <li class="list-group-item">
               <h6 class="card-title mb-2">Rating</h6>
 
-              <div aria-label="Rating">
+              <div id="rating-stars" aria-label="Rating">
 
                 <input type="radio" class="btn-check" value="1" name="review[rating]" id="1star" autocomplete="off">
-                <label class="btn btn-outline-secondary " for="1star">1 <i class="fa fa-star"></i></label>
+                <label class="btn btn-outline-secondary  starhover" for="1star">1 <i class="fa fa-star"></i></label>
 
                 <input type="radio" class="btn-check" value="2" name="review[rating]" id="2star" autocomplete="off">
-                <label class="btn btn-outline-secondary " for="2star">2 <i class="fa fa-star"></i></label>
+                <label class="btn btn-outline-secondary starhover " for="2star">2 <i class="fa fa-star"></i></label>
 
                 <input type="radio" class="btn-check" value="3" name="review[rating]" id="3star" autocomplete="off">
-                <label class="btn btn-outline-secondary " for="3star">3 <i class="fa fa-star"></i></label>
+                <label class="btn btn-outline-secondary starhover" for="3star">3 <i class="fa fa-star"></i></label>
 
                 <input type="radio" class="btn-check" value="4" name="review[rating]" id="4star" autocomplete="off">
-                <label class="btn btn-outline-secondary " for="4star">4 <i class="fa fa-star"></i></label>
+                <label class="btn btn-outline-secondary starhover" for="4star">4 <i class="fa fa-star"></i></label>
 
                 <input type="radio" class="btn-check" value="5" name="review[rating]" id="5star" autocomplete="off"
                   checked>
-                <label class="btn btn-outline-secondary " for="5star">5 <i class="fa fa-star"></i></label>
+                <label class="btn btn-outline-secondary starhover" for="5star">5 <i class="fa fa-star"></i></label>
               </div>
             </li>
             <li class="list-group-item">
@@ -102,7 +109,7 @@
       <% } %>
       <h3 class="card-title">Reviews</h3>
       <%for(let review of campground.reviews){%>
-        <div class="card border-dark mb-3" style="width: 30rem;">
+        <div class="card border-dark mb-3" >
           <!-- <div class="card-header">Header</div> -->
           <div class="flex-d flex-row px-2 py-2">
             <strong>Rating:</strong>
@@ -132,6 +139,7 @@
         <%}%>
 
     </div>
+  </div>
 
   </div>
 
