--- a/views/userRegistration/signup.ejs
+++ b/views/userRegistration/signup.ejs
@@ -1,5 +1,6 @@
 <% layout('layouts/boilerplate') %>
-
+<link rel="stylesheet" href="/css/signinsignout.css">
+<div id="outer-container">
 <h1 class="text-center mb-5">Register</h1>
 <form action="/register" method="POST" class="campgroundValidation" novalidate>
     <div class=" mb-3">
@@ -31,5 +32,6 @@
             </div>
         </div>
     </div>
-    <button type="submit" class="btn btn-success mb-5">Register</button>
+    <button type="submit" class="btn btn-success mb-2">Register</button>
 </form>
+</div>
