--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -10,7 +10,7 @@
             <div class="row g-0">
                 <div class="col-md-4">
                     <% if(campground.images.length) {%>
-                    <img src="<%=campground.images[0].url%>" class="img-fluid rounded-start" alt="...">
+                    <img id="camp-image" src="<%=campground.images[0].url%>" class="img-fluid rounded-start" alt="...">
                     <% }else{ %>
                     <img src="https://res.cloudinary.com/douqbebwk/image/upload/v1600103881/YelpCamp/lz8jjv2gyynjil7lswf4.png" class="img-fluid rounded-start" alt="...">
                       <% } %>  
